# SandBoxWebsite

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
.claude/agents/: blog-writer.md
.github/workflows/: enrich-sbox.yml  itemdef-steam.yml  sbox-probe.yml  scrape-nameids.yml  scrape-store.yml  scrape-supply.yml
docs/: itemdef-worker-spec.md
docs/superpowers/plans/: 2026-06-13-new-drop-discovery.md
docs/superpowers/specs/: 2026-06-13-new-drop-discovery-design.md
graphify-out/: .gitignore  .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
prisma/: schema.prisma  seed.ts
public/: sbox-nameid-harvester.user.js
scripts/: SETUP-discover-task.md  discover-from-sbox.mjs  enrich-from-sbox.mjs  run-discover-local.ps1  scrape-nameids.ts  scrape-store.ts  scrape-supply.ts
scripts/checks/: drop-label.check.ts  scope-filter.check.mjs
scripts/market/: devnet-e2e.ts  devnet-mint-usdc.ts  devnet-setup.ts
solana/sbox-escrow/: .gitignore  Anchor.toml  README.md  package.json
solana/sbox-escrow/programs/sbox-escrow/: Cargo.toml
solana/sbox-escrow/programs/sbox-escrow/src/: lib.rs
src/app/: apple-icon.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: providers.tsx
src/lib/: debug.ts  rarity.ts  utils.ts
tools/itemdef-worker/: Program.cs  README.md  itemdef-worker.csproj
(+444 files in other folders)
