[package]
name = "sbox-escrow"
version = "0.1.0"
description = "Non-custodial USDC escrow for the sboxskins marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sbox_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
